Treat cells with percent height as auto if their container depends on content height

After some clarification with the css-tables spec author and the CSSWG, only
treat cells as having a height that percent values can resolve against if the cell
has an explicitly specified height. For example, if the cell has a percent height
but nothing in its container chain to resolve that percentage against it doesn't
have an explicitly specified height.

BUG=687551

Review-Url: https://codereview.chromium.org/2816313002
Cr-Commit-Position: refs/heads/master@{#466287}

Former-commit-id: 019c92b5d6c58f4c240ea2b64bb748c9bb3a6c15